--- a/KaloriWebApplication/Views/Account/Login.cshtml
+++ b/KaloriWebApplication/Views/Account/Login.cshtml
@@ -1,8 +1,8 @@
 ﻿@model KaloriWebApplication.Models.Concrete.User
 
 @{
-    ViewData["Title"] = "Login";
-}
+    ViewData["Title"] = "Login";}
+    
 <style>
     .card-header {
         background-color: cadetblue !important;
