--- a/KaloriWebApplication/Views/Account/Register.cshtml
+++ b/KaloriWebApplication/Views/Account/Register.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Register";
+    
 }
 
 <style>
@@ -10,7 +11,11 @@
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
     }
+
+    
 
     .text-success {
         color: cadetblue !important; 
@@ -25,6 +30,10 @@
         color: cadetblue !important; 
     }
 
+    .card-footer {
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
     
 </style>
 
