notifications saved to database

--- a/KaloriWebApplication/Views/Account/notification.cshtml
+++ b/KaloriWebApplication/Views/Account/notification.cshtml
@@ -109,7 +109,7 @@ main{
              <p id="mark_read">Mark all as read.</p>
                 
         </header>
-        <main>
+        <main class="main" >
 
             <div class="card unread">
                 <div class="text">
@@ -169,9 +169,7 @@ main{
             var newunread = document.querySelectorAll('.unread');
             unreadmessagecount.innerText = newunread.length;
         });
-
-
-      
+ 
 
     </script>
 }
