--- a/KaloriWebApplication/Views/Shared/_dashlayout.cshtml
+++ b/KaloriWebApplication/Views/Shared/_dashlayout.cshtml
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard - SB Admin</title>
+    <title>@ViewData["Title"] - CaloryAPP</title>
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link href="~/css/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -47,32 +47,31 @@
                             MainPage
                         </a>
                         <a class="nav-link" asp-controller="Nutrient" asp-action="NutrientSelect">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-utensils"></i></div>
                             Besin Girişi
                         </a>
                         <a class="nav-link" asp-controller="Account" asp-action="DailyWeeklyReports">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-chart-line"></i></div>
                             Günlük Haftalık Raporlar
                         </a>
-                        <a class="nav-link" asp-controller="Report" asp-action="notification">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                        <a class="nav-link" asp-controller="Report" asp-action="Notification">
+                            <div class="sb-nav-link-icon"><i class="fas fa-bell"></i></div>
                             Bildirimler
                         </a>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
-                    user.name yaparız burayı
+                    @ViewBag.UserName
                 </div>
             </nav>
         </div>
         <div id="layoutSidenav_content">
             <main class="container">
                 <div class="container-fluid px-4">
-                    <row>
-
-                    </row>
-                    @RenderBody()
+                    <div class="row">
+                        @RenderBody()
+                    </div>
                 </div>
             </main>
             <footer class="py-4 bg-light mt-auto">
@@ -90,10 +89,19 @@
         </div>
     </div>
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="~/js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+        @if (TempData["SuccessMessage"] != null)
+        {
+            <text>
+                    alert("@TempData["SuccessMessage"]");
+            </text>
+        }
+                });
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
