--- a/KaloriWebApplication/Views/Report/notification.cshtml
+++ b/KaloriWebApplication/Views/Report/notification.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<KaloriWebApplication.Models.Concrete.notification>
+﻿﻿@model List<KaloriWebApplication.Models.Concrete.notification>
 
 @{
     Layout = "_dashlayout";
