--- a/KaloriWebApplication/Views/Report/notification.cshtml
+++ b/KaloriWebApplication/Views/Report/notification.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@Model List<KaloriWebApplication.Models.Concrete.notification>
+﻿ ﻿@Model List<KaloriWebApplication.Models.Concrete.notification>
 
 @{
     Layout = "_dashlayout";
@@ -18,13 +18,14 @@
         justify-content: center;
         width: 100%;
         height: 100vh;
-        background-color: darkgrey;
+        background-color:aliceblue;
     }
 
     .notinficationcontainer {
         background-color: white;
         border-radius: 1.5rem;
-        width: 700px;
+        width: 900px;
+        height 75vh;
         padding: 1 rem 1 rem;
         margin: 1.5 rem;
         overflow: auto;
@@ -98,7 +99,6 @@
 <div class="container">
 
     <div class="notinficationcontainer">
-
         <header>
             <div class="headertext">
                 <h1>Notifications</h1>
